# Bachelorarbeit_Erkennung-von-Fake-News-auf-Nachrichtenportalen

./: .gitattributes  .gitignore  README.md  meeting_notes.md
Code/Chrome Extension/: background.js  bild.css  bild.js  manifest.json  popup.html
Code/Machine Learning Model/: .gitignore  compose.yml
Code/Machine Learning Model/server/starlette/: Dockerfile  docker-compose.yml  main.py  publish_starlette.sh  pyproject.toml  startup.sh
Code/Machine Learning Model/server/starlette/yelp_review_full_bert/: config.json
Datasets/: Datasets.pages  FangCovid.bib
Exposé/: Gliederungen ausführlich.pages  Phasenbeschreibung.drawio  Vertrag zur Abschlussarbeit (3 konkrete Plattformen).pages  Vertrag zur Abschlussarbeit.pages
Kolloquium/: inhalt_sammlung.md
Latex/manual/: manual.aux  manual.bbl  manual.blg  manual.fdb_latexmk  manual.fls  manual.idx  manual.ilg  manual.ind  manual.toc
Latex/style/: abstractpage.tex  thesisstyle.sty  titlepage.tex
Latex/thesis/: literature.bib  thesis.aux  thesis.bbl  thesis.blg  thesis.fdb_latexmk  thesis.fls  thesis.ist  thesis.lof  thesis.lot  thesis.tex  thesis.toc
Latex/thesis_src/: clean_build_latex.sh  clean_latex_aux.sh  dummy  literature.bib  thesis 2.lot  thesis.aux  thesis.bbl  thesis.blg  thesis.dvi  thesis.fdb_latexmk  thesis.fls  thesis.ist  thesis.lof  thesis.lot  thesis.synctex(busy)  thesis.tex  thesis.toc  thesis.xdv
Literatur/: Citations.bib
Literatur/Citations/: A comprehensive overview of fake news detection on social networks.ris  (+13 more)
Python/: fang_covid.py  kaggle.py  kaggleGermanNewsDataset.py  zenodo.py
(+91 files in other folders)
