[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "starlette>=0.47.0",
    "torch>=2.3.0",        # Current stable PyTorch (as of June 2025)
    "transformers>=4.42.0", # Current stable transformers (as of June 2025)
    "uvicorn>=0.34.3",
    "numpy>=1.26.0",       # NumPy is essential for array manipulation and the return type
    "accelerate>=0.28.0"
]
