[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "starlette>=0.47.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "uvicorn>=0.34.3",
    "numpy>=1.26.0",       # NumPy is essential for array manipulation and the return type
    "accelerate>=0.28.0",
    "lightgbm>=4.6.0",
    "scikit-learn>=1.4.2",
    "joblib",
    "pathlib",
]
